--- a/src/llm_manager/config.yaml
+++ b/src/llm_manager/config.yaml
@@ -111,12 +111,15 @@ providers:
       models:
         claude-sonnet-3.7:
           model_id: "arn:aws:bedrock:us-east-2:931886963315:inference-profile/us.anthropic.claude-3-7-sonnet-20250219-v1:0"
+          thinking_supported: true
 
         claude-sonnet-4:
           model_id: "arn:aws:bedrock:us-east-2:931886963315:inference-profile/us.anthropic.claude-sonnet-4-20250514-v1:0"
+          thinking_supported: true
 
         claude-opus-4:
           model_id: "arn:aws:bedrock:us-east-2:931886963315:inference-profile/anthropic.claude-opus-4-20250514-v1:0"
+          thinking_supported: true
 
   vLLM:
     enabled: true
