--- a/src/llm_manager/config.yaml
+++ b/src/llm_manager/config.yaml
@@ -127,6 +127,22 @@ providers:
       qwen2-7b:
         model_id: "Qwen/Qwen2-7B-Instruct"
 
+  ollama:
+    enabled: true
+    base_url: "${OLLAMA_BASE_URL:-http://localhost:11434}"
+    models:
+      llama3.2:
+        model_id: "llama3.2"
+      mistral:
+        model_id: "mistral"
+      codellama:
+        model_id: "codellama"
+      # Add more models as needed
+      # Each model can optionally override base_url:
+      # custom-model:
+      #   model_id: "custom-model-name"
+      #   base_url: "http://custom-host:11434"
+
 
 # Default settings
 default_provider: "${DEFAULT_PROVIDER:-azure}"
