Added a simple sciab script with streamlit app

--- a/src/llm_manager/config.yaml
+++ b/src/llm_manager/config.yaml
@@ -137,6 +137,8 @@ providers:
         model_id: "mistral"
       codellama:
         model_id: "codellama"
+      qwen2.5:
+        model_id: "qwen2.5"
       # Add more models as needed
       # Each model can optionally override base_url:
       # custom-model:
